--- a/QuestionnaireWeb/src/app/app.component.html
+++ b/QuestionnaireWeb/src/app/app.component.html
@@ -1,2 +1,1 @@
-<button mat-button color="primary">Primary</button>
-<button mat-raised-button color="primary">Primary</button>
+<router-outlet name="HomeRO"></router-outlet>
