--- a/QuestionnaireWeb/src/app/app.component.html
+++ b/QuestionnaireWeb/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet name="HomeRO"></router-outlet>
+<button mat-button>Home</button>
+<button mat-button>My Q</button>
+<button mat-button>About</button>
+<button mat-button>Contact</button>
+<router-outlet ></router-outlet>
