update whole project to use angular6

--- a/QuestionnaireWeb/src/app/app.component.html
+++ b/QuestionnaireWeb/src/app/app.component.html
@@ -3,3 +3,8 @@
 <button mat-button>About</button>
 <button mat-button>Contact</button>
 <router-outlet ></router-outlet>
+
+
+  <footer fxFlex="100%" fxLayout="row" fxFlexFill style="background-color: forestgreen">
+    sdfsfsfsf
+  </footer>
