--- a/QuestionnaireWeb/src/app/questionnaire-common/ques-nav/ques-nav.component.html
+++ b/QuestionnaireWeb/src/app/questionnaire-common/ques-nav/ques-nav.component.html
@@ -25,5 +25,8 @@
       </button>
       <span>Application Title</span>
     </mat-toolbar>
+    <section>
+      sdfsdfsfsdfssdfs
+    </section>
   </mat-sidenav-content>
 </mat-sidenav-container>
