--- a/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-layout/questionnaire-layout.component.html
+++ b/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-layout/questionnaire-layout.component.html
@@ -8,8 +8,8 @@
     [opened]="!(isHandset | async)!.matches">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item href="#"[routerLink]="['dashboard']">Dashboard</a>
       <a mat-list-item href="#" [routerLink]="['create']">Create</a>
-      <a mat-list-item href="#">Link 2</a>
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
