--- a/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-create/questionnaire-create.component.html
+++ b/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-create/questionnaire-create.component.html
@@ -1,13 +1,27 @@
-<!-- <mat-card>
-  <mat-card-content>
-    editor
-  </mat-card-content>
-  <mat-card-actions>
-  </mat-card-actions>
-</mat-card> -->
+<div class="editorContainer">
+    <mat-button-toggle-group vertical #group="matButtonToggleGroup">
+      <mat-button-toggle draggable="true" value="单选">
+        <mat-icon svgIcon="singlequestion"></mat-icon>
+      </mat-button-toggle>
+      <mat-button-toggle draggable="true" value="多选">
+        <mat-icon svgIcon="multiquestion"></mat-icon>
+      </mat-button-toggle>
+      <mat-button-toggle draggable="true" value="填空">
+        <mat-icon svgIcon="textquestion"></mat-icon>
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+  <!-- <mat-divider [vertical]="true"></mat-divider> -->
+  <div id="editor">
+    <mat-card>
+      <mat-card-content>
+        editor
+      </mat-card-content>
+      <mat-card-actions>
+      </mat-card-actions>
+    </mat-card>
 
+  </div>
 
-<mat-grid-list class="grid-container" cols="4" rowHeight="1:2">
-    <mat-grid-tile colspan="3">2</mat-grid-tile>
-    <mat-grid-tile>1</mat-grid-tile>
-</mat-grid-list>
+  <div class="clear-both"></div>
+
+</div>
