add .net core webapi

--- a/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-layout/questionnaire-layout.component.html
+++ b/QuestionnaireWeb/src/app/my-questionnaire/questionnaire-layout/questionnaire-layout.component.html
@@ -23,10 +23,11 @@
         *ngIf="(isHandset | async)!.matches">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Application Title</span>
+      <span>Web Application</span>
     </mat-toolbar>
     <section>
       <router-outlet></router-outlet>
     </section>
   </mat-sidenav-content>
+
 </mat-sidenav-container>
